# rust_clz_xml

./: .gitignore  Cargo.toml  Credits.md  Makefile  README.md  compose.yaml  deno.json
data/: clz_data_sample.xml
database/: README.md  create_db.sql  empty_db.sql
db-util/: Makefile
db-util/src/: db-util.go
dbutil/: Makefile  README.md  dbutil.dockerfile  go.mod
dbutil/dbutilserver/: dbutil.pb.go  dbutil.proto  dbutil_grpc.pb.go
dbutil/queries/: useful_queries.sql
dbutil/scripts/: create_db.sql
dbutil/src/: console.go  db-util.go
dbutil/src/client/: client.go
dbutil/src/lib/: db-util.go
dbutil/src/server/: server.go
deno/: .gitignore  Makefile  README.md  deno.dockerfile  deno.json  start.sh  vite.config.ts
deno/client/: index.html
deno/client/src/: App.tsx  BookTable.tsx
deno/docker/: deno.dockerfile  start.sh
docker/: start.sh
k8s/: README.md  deploy-deno-web-app.yaml
parser/: Cargo.toml  README.md
parser/lib/: database.rs  lib.rs  parse.rs
parser_grpc/: Cargo.toml  Makefile  README.md  build.rs
parser_grpc/docker/: parser-grpc.dockerfile
parser_grpc/src/: client.rs  grpc.rs  main.rs  parser_thread.rs
src/: Makefile  README.md  data.rs  database.rs  main.rs  parse.rs
tui/: Makefile  README.md  go.mod  go.sum
tui/clz_xml_rpc/: clz_xml.pb.go  clz_xml.proto  clz_xml_grpc.pb.go
tui/cmd/grpc_test_client/: grpc_test_client.go
tui/proto/: clz_xml.proto
webapp/: Makefile  README.md  deno.json  main.ts
webapp/docker/: README.md  deno.no-volume.dockerfile  start.sh
webapp/server/: main.ts
webapp_old/: README.md  main.ts
(+10 files in other folders)
