[package]
name = "clz_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clz_data"
path = "bin/main.rs"

[[bin]]
name = "parser_grpc"
path = "../parser_grpc/src/main.rs"

[lib]
name = "clz_data"
path = "lib/lib.rs"

[dependencies]
colored = "2.1.0"
quick-xml = "0.37.0"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread"] }
