[package]
name = "parser_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
clz_data = { path = "../parser" }

colored = "2.1.0"
quick-xml = "0.37.0"

# For gRPC:
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[build-dependencies]
tonic-build = "*"
